Add additional context for returning users to login

--- a/app/views/users/_teacher_form.html.erb
+++ b/app/views/users/_teacher_form.html.erb
@@ -12,12 +12,19 @@
     </div>
   <% end %>
 
-  <h3>Please fill out the form below and select "Next" at the bottom to upload your resume and complete your Job Fair/Resume Bank registration.</h3>
+  <ul class="register-content-list">
+    <li><strong>Returning users:</strong> <a href="/sessions/new">Log in</a> to review and edit your profile and register for the 2019 job fair.</li>
+    <li><strong>New Users:</strong> Please fill out the survey below and select "Next" at the bottom to upload your resume and complete your Job Fair/Resume Bank registration.
+    </li>
+  </ul>
+  <br>
+  <br>
   <h5>We recommend answering questions, even when not required, to increase chances of being identified by a school.</h5>   
   <h4>If you have any trouble with this form, please contact <a href="mailto:alevybrown@incschools.org?subject=Resume Bank Question">alevybrown@incschools.org</a>.</h4><br><br> 
 
   <div class="field">
     <label><em class="label-bold">What would you like to do? *</em></label><br>
+    <label><em class="label-bold">If you have already signed up in previous years, please <a href="/sessions/new">log in</a> to register for the 2019 teacher job fair.</em></label><br>
     <div class="field-radio">
       <%= f.radio_button(:register2019, "both") %>
       <%= f.label(:name, "Register for the 2019 INCS Teacher & Administrator Job Fair and Online Resume Bank.", class: 'flex-one') %><br>
