Add link to reset password

--- a/app/views/users/_teacher_form.html.erb
+++ b/app/views/users/_teacher_form.html.erb
@@ -13,7 +13,7 @@
   <% end %>
 
   <ul class="register-content-list">
-    <li><strong>Returning users:</strong> <a href="/sessions/new">Log in</a> to review and edit your profile and register for the 2019 job fair.</li>
+    <li><strong>Returning users:</strong> <a href="/sessions/new">Log in</a> to review and edit your profile and register for the 2019 job fair. Click <a href="/users/getreset">here</a> if you need to reset your password.</li>
     <li><strong>New Users:</strong> Please fill out the survey below and select "Next" at the bottom to upload your resume and complete your Job Fair/Resume Bank registration.
     </li>
   </ul>
