Add more copy to registration form

--- a/app/views/users/_teacher_form.html.erb
+++ b/app/views/users/_teacher_form.html.erb
@@ -21,6 +21,7 @@
     </li>
   </ul>
   <br>
+  <h3>New User Registration for Resume Bank</h3>
   <br>
   <h5>We recommend answering questions, even when not required, to increase chances of being identified by a school.</h5>   
   <h4>If you have any trouble with this form, please contact <a href="mailto:alevybrown@incschools.org?subject=Resume Bank Question">alevybrown@incschools.org</a>.</h4><br><br> 
