--- a/app/views/users/show_school.html.erb
+++ b/app/views/users/show_school.html.erb
@@ -14,6 +14,10 @@
   </div><br>
 
   <div class="field7">
+    <%= text_field_tag :search, params[:search], placeholder: "Search by name" %>
+  </div><br>
+
+  <div class="field7">
     <em><%= label_tag(:location_pref, "Location preference") %></em><br>
     <ul class="checkbox-grid2">
     <% locations.each do |loc| %>
